--- a/templates/pagamento_offline/edit.html.twig
+++ b/templates/pagamento_offline/edit.html.twig
@@ -2,12 +2,12 @@
 
 {% extends 'private/base.html.twig' %}
 
-{% block title %}Edit Pagamentos Offline{% endblock %}
+{% block title %}Pagamentos Offline{% endblock %}
 
 {% block stylesheets %}
 {% endblock %}
 
-{% block pageHeading %}Editar Pagamentos Offline{% endblock %}
+{% block pageHeading %}Edit Pagamentos Offline{% endblock %}
 
 {% block pageBreadcrumb %}
 {% endblock %}
@@ -25,24 +25,14 @@
         <div class="col-12">
             <div class="card card-flush">
                 <div class="card-header pt-7">
-                                   
 
                     {{ include('pagamento_offline/_form.html.twig', {'button_label': 'Update'}) }}
-
+                    
                     <a class="btn btn-info" href="{{ path('app_pagamento_offline_index') }}">back to list</a>
 
                     {{ include('pagamento_offline/_delete_form.html.twig') }}
 
                 </div>
-
-
-
-
-
-
-
-
-
             </div>
         </div>
     </div>
