--- a/templates/pagamento_offline/index.html.twig
+++ b/templates/pagamento_offline/index.html.twig
@@ -5,7 +5,7 @@
 {% block stylesheets %}
 {% endblock %}
 
-{% block pageHeading %}Visão dos Pagamentos Offline{% endblock %}
+{% block pageHeading %}List Pagamentos Offline{% endblock %}
 
 {% block pageBreadcrumb %}
 {% endblock %}
@@ -84,7 +84,7 @@
                                         </div>
                     #}                </div>
                 <div class="card-body pt-2 pb-0">
-                    <table class="table align-middle table-row-dashed fs-6 gy-3">
+                    <table class="table table-striped align-middle table-row-dashed fs-6 gy-3">
                         <thead>
                             <tr class="text-start text-gray-400 fw-bold fs-7 text-uppercase gs-0">
                                 <th class="min-w-100px">ID Pagamento</th>
@@ -143,7 +143,7 @@
 
                         </tbody>
                     </table>
-                    <a href="{{ path('app_pagamento_offline_new') }}">Create new</a>
+                    <a class="btn btn-primary" href="{{ path('app_pagamento_offline_new') }}">Create new</a>
                 </div>
             </div>
             {#            {% if number_of_pages >= 1 %}
