--- a/templates/private/optionals/optionals.html.twig
+++ b/templates/private/optionals/optionals.html.twig
@@ -27,7 +27,7 @@
                 <div class="card card-flush mb-4 mb-xl-8">
                     <div class="card-header p-5">
                         <div class="card-title d-flex flex-column">
-                            <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 text-primary">{{ optional.value }}</span>
+                            <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 text-primary">{{ optional.value }} </span>
                             <span class="fs-2hx fw-bold text-white me-2 mb-2 lh-1 ls-n2 text-primary"><div id="total_{{loop.index0}}"></div></span>
                             <span class="text-gray-600 pt-1 fw-semibold fs-6">{{ optional.key }}</span>
                         </div>
@@ -92,16 +92,19 @@
                                     {% for column in columns %}
                                     <th class="text-center min-w-125px">{{ column }}</th>
                                     {% endfor %}
+
                                 <th class="text-end">Estado</th>
+                                <th class="text-end">Total</th>
+
                             </tr>
                         </thead>
                         <tbody class="fw-bold text-gray-600">
 
 
-                            
+
                             {% for optional in optionals %}
 
-                                
+
                                 <tr>
                                     <td>
                                         <div class="text-gray-800">{{ optional.order_id }}</div>
@@ -116,6 +119,7 @@
                                     </td>
 
                                     {% set counter= 0 %}
+                                    {% set soma_linha = 0 %}
                                     {% for answer in optional.item_data %}
                                         <td class="text-center text-uppercase">
                                             <div class="{% if answer == 'Não' %}text-danger{% else %}text-primary{% endif %}">
@@ -127,16 +131,10 @@
                                                         {% set value_str = yes_or_no[1]|split('(') %}
                                                         {% set value = value_str[1]|split('€') %}
 
-                                                        {#                                                        {% for key,value_in_somas in somas %}  
-                                                                                                                    {% if key == counter %}
-                                                                                                                        {% set value_in_somas = value_in_somas + value[0]  %}
-                                                                                                                        {% set somas = {(counter): value_in_somas} + somas %}
-                                                                                                                    {% endif %}
-                                                                                                                {% endfor %}#}
 
                                                         {% set somas = { (counter): somas[counter] + value[0]} + somas %} 
+                                                        {% set soma_linha = soma_linha + value[0] %}
 
-                                                       
                                                     {% endif %}
 
                                                     {{ yes_or_no[1] }}
@@ -149,8 +147,14 @@
                                     {% endfor %}
 
 
+
+
                                     <td class="text-end">
                                         <span class="badge py-3 px-4 fs-7 {{ optional.statusdesc.color_class }}">{{ optional.statusdesc.label }}</span>
+                                    </td>
+
+                                    <td class="text-end">
+                                        <span class="text-uppercase">{{ soma_linha }} €</span>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -160,21 +164,21 @@
             </div>
         </div>
     </div>
-                            
-                            
+
+
     {% for key,value in somas %}  
         {# {% if key == counter %}
              {% set value_in_somas = value_in_somas + value[0]  %}
              {% set somas = {(counter): value_in_somas} + somas %}
          {% endif %}#}
-    <script>
-    document.getElementById("total_{{key}}").innerHTML = {{value}} + "€";
+        <script>
+        document.getElementById("total_{{key}}").innerHTML =  {{value}} +" €";
 
         </script>
     {% endfor %}
 
 
-                            
+
 {% endblock %}
 
 {% block javascripts %}
